--- a/src/components/Statistics/statistics.module.css
+++ b/src/components/Statistics/statistics.module.css
@@ -6,13 +6,14 @@
     margin: 0 auto;
     margin-bottom: 20px;
     border-radius: 5px;
-    background-color: #cccccc;
+    background-color: white;
+    box-shadow: 0 0 10px;
 }
 
 .title {
     margin: 0;
-    margin-bottom: 40px;
-
+    margin-bottom: 30px;
+    text-transform: uppercase;
     font-size: 20px;
     line-height: 1.33;
     font-weight: 700;
@@ -39,7 +40,6 @@
     flex-direction: column;
     width: 50px;
     height: 50px;
-    border: solid 1px teal;
     border-radius: 5%;
 }
 
